<resources>
    <string name="app_name">Get Taxi 2</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_id">This id is invalid</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_invalid_credit_card">This credit card number is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login">Login</string>
    <string name="email_str">Email</string>
    <string name="password_str">Password</string>
    <string name="remember_me_str">Remember me</string>
    <string name="sign_in_sr">SIGN IN</string>
    <string name="sign_in_with_google_str">Sign in with google</string>
    <string name="sign_up_str">Don\'t have an account? Sign Up</string>
    <string name="registration_details_str">registration details</string>
    <string name="first_name_str">First Name</string>
    <string name="last_name_str">Last Name</string>
    <string name="id_str">ID</string>
    <string name="phone_number_str">Phone Number</string>
    <string name="credit_card_str">Credit Card</string>
    <string name="cancel_str">CANCEL</string>
    <string name="register_str">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_str">FINISH</string>
    <string name="few_more_details_str">Few More Details</string>
</resources>
