<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".controller.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/wendy_one"
                        android:text="get  taxi"
                        android:textColor="@color/black"
                        android:textSize="70sp" />

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/ic_lock_outline_black_24dp"
                        android:tint="@color/colorAccent" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="serif"
                        android:text="@string/login"
                        android:textColor="@color/colorAccent"
                        android:textSize="22sp"
                        android:textStyle="italic|bold" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/image_view1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linear_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-20dp"
                    android:rotation="45"
                    android:src="@drawable/square" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_view1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <RelativeLayout
                        android:id="@+id/relative_layout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/image_view1_user_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="3dp"
                            android:src="@drawable/ic_person_black_24dp"
                            android:tint="@color/colorAccent" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/image_view1_user_icon"
                            android:background="@color/editText"
                            android:hint="@string/email_str"
                            android:inputType="textEmailAddress"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textSize="15sp" />

                    </RelativeLayout>



                    <RelativeLayout
                        android:id="@+id/relative_layout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/relative_layout1"
                        android:layout_marginTop="20dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/image_view1_password_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="4dp"
                            android:src="@drawable/ic_lock_outline_black_24dp"
                            android:tint="@color/colorAccent" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="@+id/image_view1_password_icon"
                            android:layout_toEndOf="@+id/image_view1_password_icon"
                            android:background="@color/editText"
                            android:hint="@string/password_str"
                            android:inputType="textPassword"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_layout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/relative_layout2"
                        android:layout_marginTop="15dp">

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/remember_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/remember_me_str"
                            android:textColor="@color/textColor" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/relative_layout3"
                        android:layout_marginTop="10dp">

                        <android.support.design.button.MaterialButton
                            android:id="@+id/sign_in_btn"
                            style="@style/ButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/sign_in_sr"/>

                        <com.shobhitpuri.custombuttons.GoogleSignInButton
                            android:id="@+id/google_sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/sign_in_btn"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:text="@string/sign_in_with_google_str">

                        </com.shobhitpuri.custombuttons.GoogleSignInButton>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/register_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/google_sign_in"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="20dp"
                            android:clickable="true"
                            android:text="@string/sign_up_str" />
                    </RelativeLayout>

                </RelativeLayout>
            </RelativeLayout>

        </android.support.design.card.MaterialCardView>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>